Integrate wander into D3D11 sample app

--- a/examples/Examples.vcxproj.filters
+++ b/examples/Examples.vcxproj.filters
@@ -20,5 +20,7 @@
     <CopyFileToFolders Include="dx11\shaders.hlsl">
       <Filter>DX11</Filter>
     </CopyFileToFolders>
+    <CopyFileToFolders Include="..\wasmtime\lib\wasmtime.dll" />
+    <CopyFileToFolders Include="Building.wasm" />
   </ItemGroup>
 </Project>
