Fix GLEW on Parallels (rollback)

--- a/examples/OpenGL/OpenGL.vcxproj
+++ b/examples/OpenGL/OpenGL.vcxproj
@@ -98,22 +98,22 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">
-    <IncludePath>$(ProjectDir)glfw\include;$(ProjectDir)glew\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)glfw\include;$(ProjectDir)glew\include;$(ProjectDir)gl3w;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'">
-    <IncludePath>$(ProjectDir)glfw\include;$(ProjectDir)glew\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)glfw\include;$(ProjectDir)glew\include;$(ProjectDir)gl3w;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(ProjectDir)glfw\include;$(ProjectDir)glew\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)glfw\include;$(ProjectDir)glew\include;$(ProjectDir)gl3w;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(ProjectDir)glfw\include;$(ProjectDir)glew\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)glfw\include;$(ProjectDir)glew\include;$(ProjectDir)gl3w;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(ProjectDir)glfw\include;$(ProjectDir)glew\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)glfw\include;$(ProjectDir)glew\include;$(ProjectDir)gl3w;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(ProjectDir)glfw\include;$(ProjectDir)glew\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)glfw\include;$(ProjectDir)glew\include;$(ProjectDir)gl3w;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -201,6 +201,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="demo.cpp" />
+    <ClCompile Include="gl3w\gl3w.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
