--- a/examples/OpenGL/OpenGL.vcxproj.filters
+++ b/examples/OpenGL/OpenGL.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="demo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gl3w\gl3w.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
