--- a/examples/OpenGL/OpenGL.vcxproj.filters
+++ b/examples/OpenGL/OpenGL.vcxproj.filters
@@ -18,8 +18,16 @@
     <ClCompile Include="demo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="gl3w\gl3w.c">
+    <ClCompile Include="..\..\wander.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\wander.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\wander_lib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
