--- a/examples/OpenGL/OpenGL.vcxproj.filters
+++ b/examples/OpenGL/OpenGL.vcxproj.filters
@@ -30,4 +30,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <CopyFileToFolders Include="..\..\wasmtime\lib\wasmtime.dll" />
+  </ItemGroup>
 </Project>
