--- a/examples/dx11/DX11.vcxproj
+++ b/examples/dx11/DX11.vcxproj
@@ -215,10 +215,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\wander.h" />
+    <ClInclude Include="bmpread.h" />
     <ClInclude Include="xube.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\wander.cpp" />
+    <ClCompile Include="bmpread.c" />
     <ClCompile Include="code.cpp" />
   </ItemGroup>
   <ItemGroup>
