--- a/examples/dx11/DX11.vcxproj.filters
+++ b/examples/dx11/DX11.vcxproj.filters
@@ -3,10 +3,12 @@
   <ItemGroup>
     <ClInclude Include="xube.h" />
     <ClInclude Include="..\..\wander.h" />
+    <ClInclude Include="bmpread.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="code.cpp" />
     <ClCompile Include="..\..\wander.cpp" />
+    <ClCompile Include="bmpread.c" />
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="shaders.hlsl" />
