--- a/examples/OpenGL/OpenGL.vcxproj.filters
+++ b/examples/OpenGL/OpenGL.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="..\..\wander.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="bmpread.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\wander.h">
