Add experiment rive-render build in DX11 example

--- a/examples/dx11/DX11.vcxproj
+++ b/examples/dx11/DX11.vcxproj
@@ -116,12 +116,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(SolutionDir)..\;$(SolutionDir)..\wasmtime\include;$(SolutionDir)..\libs\rive-renderer\submodules\rive-cpp\include;$(SolutionDir)..\libs\rive-renderer\include;$(IncludePath)</IncludePath>
     <SourcePath>$(SolutionDir)..\;$(SourcePath)</SourcePath>
-    <LibraryPath>$(SolutionDir)..\wasmtime\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)..\wasmtime\lib;$(SolutionDir)..\libs\rive-renderer\out\$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(SolutionDir)..\;$(SolutionDir)..\wasmtime\include;$(SolutionDir)..\libs\rive-renderer\submodules\rive-cpp\include;$(SolutionDir)..\libs\rive-renderer\include;$(IncludePath)</IncludePath>
     <SourcePath>$(SolutionDir)..\;$(SourcePath)</SourcePath>
-    <LibraryPath>$(SolutionDir)..\wasmtime\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)..\wasmtime\lib;$(SolutionDir)..\libs\rive-renderer\out\$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -159,7 +159,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -174,7 +174,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
