--- a/examples/dx11/DX11.vcxproj
+++ b/examples/dx11/DX11.vcxproj
@@ -98,30 +98,30 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">
-    <IncludePath>$(SolutionDir)..\;$(SolutionDir)..\wasmtime\include;$(SolutionDir)..\libs\rive-renderer\submodules\rive-cpp\include;$(SolutionDir)..\libs\rive-renderer\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir);$(SolutionDir)..\;$(SolutionDir)..\wasmtime\include;$(SolutionDir)..\libs\rive-renderer\submodules\rive-cpp\include;$(SolutionDir)..\libs\rive-renderer\include;$(IncludePath)</IncludePath>
     <SourcePath>$(SolutionDir)..\;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'">
-    <IncludePath>$(SolutionDir)..\;$(SolutionDir)..\wasmtime\include;$(SolutionDir)..\libs\rive-renderer\submodules\rive-cpp\include;$(SolutionDir)..\libs\rive-renderer\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir);$(SolutionDir)..\;$(SolutionDir)..\wasmtime\include;$(SolutionDir)..\libs\rive-renderer\submodules\rive-cpp\include;$(SolutionDir)..\libs\rive-renderer\include;$(IncludePath)</IncludePath>
     <SourcePath>$(SolutionDir)..\;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(SolutionDir)..\;$(SolutionDir)..\wasmtime\include;$(SolutionDir)..\libs\rive-renderer\submodules\rive-cpp\include;$(SolutionDir)..\libs\rive-renderer\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir);$(SolutionDir)..\;$(SolutionDir)..\wasmtime\include;$(SolutionDir)..\libs\rive-renderer\submodules\rive-cpp\include;$(SolutionDir)..\libs\rive-renderer\include;$(IncludePath)</IncludePath>
     <SourcePath>$(SolutionDir)..\;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(SolutionDir)..\;$(SolutionDir)..\wasmtime\include;$(SolutionDir)..\libs\rive-renderer\submodules\rive-cpp\include;$(SolutionDir)..\libs\rive-renderer\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir);$(SolutionDir)..\;$(SolutionDir)..\wasmtime\include;$(SolutionDir)..\libs\rive-renderer\submodules\rive-cpp\include;$(SolutionDir)..\libs\rive-renderer\include;$(IncludePath)</IncludePath>
     <SourcePath>$(SolutionDir)..\;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)..\;$(SolutionDir)..\wasmtime\include;$(SolutionDir)..\libs\rive-renderer\submodules\rive-cpp\include;$(SolutionDir)..\libs\rive-renderer\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir);$(SolutionDir)..\;$(SolutionDir)..\wasmtime\include;$(SolutionDir)..\libs\rive-renderer\submodules\rive-cpp\include;$(SolutionDir)..\libs\rive-renderer\include;$(ProjectDir)libs\include;$(IncludePath)</IncludePath>
     <SourcePath>$(SolutionDir)..\;$(SourcePath)</SourcePath>
-    <LibraryPath>$(SolutionDir)..\wasmtime\lib;$(SolutionDir)..\libs\rive-renderer\out\$(Configuration);$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)..\wasmtime\lib;$(SolutionDir)..\libs\rive-renderer\out\$(Configuration);$(ProjectDir)libs\$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(SolutionDir)..\;$(SolutionDir)..\wasmtime\include;$(SolutionDir)..\libs\rive-renderer\submodules\rive-cpp\include;$(SolutionDir)..\libs\rive-renderer\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir);$(SolutionDir)..\;$(SolutionDir)..\wasmtime\include;$(SolutionDir)..\libs\rive-renderer\submodules\rive-cpp\include;$(SolutionDir)..\libs\rive-renderer\include;$(ProjectDir)libs\include;$(IncludePath)</IncludePath>
     <SourcePath>$(SolutionDir)..\;$(SourcePath)</SourcePath>
-    <LibraryPath>$(SolutionDir)..\wasmtime\lib;$(SolutionDir)..\libs\rive-renderer\out\$(Configuration);$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)..\wasmtime\lib;$(SolutionDir)..\libs\rive-renderer\out\$(Configuration);$(ProjectDir)libs\$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -172,7 +172,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>RLT_RIVE;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
@@ -234,7 +234,7 @@
     </CopyFileToFolders>
   </ItemGroup>
   <ItemGroup>
-    <CopyFileToFolders Include="..\Building.wasm">
+    <CopyFileToFolders Include="..\Building.rlt">
       <FileType>Document</FileType>
     </CopyFileToFolders>
   </ItemGroup>
